<resources>
    <string name="app_name">Race Marshal</string>
    <string name="tab_text_1">Active Racers</string>
    <string name="tab_text_2">Racer Times</string>
    <string name="tab_text_3">Settings</string>
    <string name="time_button_string">00:00:00</string>
    <string name="in_button_string">In</string>
    <string name="selected_racers_label_string">Selected Racers</string>
    <string name="selected_racers_text_view_string">No Racers Selected</string>
    <string name="out_button_string">Out</string>
    <string name="deselect_all_button_string">Deselect All</string>
    <string name="other_action_button_string">Other</string>
    <string name="other_actions">Other Actions</string>
    <string name="did_not_start">Did Not Start</string>
    <string name="dropped_out">Dropped Out</string>
    <string name="cancel">Cancel</string>
    <string name="filter_racers">Filter Racers</string>
    <string name="to_pass">Not Passed</string>
    <string name="checked_in">Checked In</string>
    <string name="checked_out">Checked Out</string>
    <string name="selected_checkpoints">Selected Checkpoint: </string>
    <string name="not_set">Not Set</string>
    <string name="reported">Reported</string>
    <string name="unreported">Unreported</string>
    <string name="did_not_start_uncaps">did not start</string>
    <string name="dropped_out_uncaps">dropped out</string>
    <string name="out_uncaps">out</string>
    <string name="in_uncaps">in</string>
    <string name="check_time_change_reported">The previous time has already been reported. Are you sure you want to change it?</string>
    <string name="yes">Yes</string>
    <string name="editing_racer">Editing racer: </string>
    <string name="are_you_sure_delete_the">Are you sure you want to delete the </string>
    <string name="checked_in_uncaps">checked in</string>
    <string name="checked_out_uncaps">checked out</string>
    <string name="time_question">time?</string>
    <string name="reported_time_already">You\'ve reported this time already.</string>
    <string name="waiting_send">Waiting for checkpoint to be sent..</string>
    <string name="no_bluetooth">Sorry, this feature requires bluetooth, which your phone doesn\'t appear to have.</string>
    <string name="ask_bluetooth_enable">To use this feature, bluetooth must be enabled. Click Enable to enable bluetooth, or Cancel to keep it disabled.</string>
    <string name="enable">Enable</string>
    <string name="location_permission_missing">Sorry, you\'ve not activated the location permission. Without that, this can\'t work. If the popup to enable it didn\'t appear, please go to Settings -> Apps -> RaceMarshallAndroid to manually re-enable it. Otherwise, please try again.</string>
    <string name="trying_get_checkpoint">Trying to send checkpoint. If this takes more than a few seconds, it has likely failed, and should be cancelled. Please ensure that the other person has clicked the \'Receive Checkpoint\' button prior to you clicking this.</string>
    <string name="delete_data_warning1">This will delete all data. There are currently </string>
    <string name="delete_data_warning2"> unreported or unpassed racers.</string>
    <string name="warning">Warning:</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_checkpoint_dots">Delete Checkpoint:</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_checkpoint_warning_1">You are about to delete checkpoint </string>
    <string name="delete_checkpoint_warning2">. This cannot be reversed. There are </string>
    <string name="delete_checkpoint_warning_3"> Unreported or Unpassed racers in this checkpoint</string>
    <string name="confirm">Confirm</string>
    <string name="add_checkpoint">Add Checkpoint</string>
    <string name="error">Error</string>
    <string name="okay">Okay</string>
    <string name="checkpoint_exists">That checkpoint already exists and cannot be created.</string>
    <string name="invalid_checkpoint_input">Invalid Checkpoint Input. The checkpoint must be a whole integer.</string>
    <string name="start_new_race_title">Start New race: Please provide this information:</string>
    <string name="done">Done</string>
    <string name="wrong_numbers_input">Sorry, something is wrong with the numbers you input. Both number of racers and the checkpoint number must be positive, whole integers</string>
    <string name="selected_checkpoint_changed">Selected Checkpoint Changed</string>
    <string name="no_previous_checkpoint">Your previously selected checkpoint no longer exists. Your selected checkpoint has been changed to checkpoint number: </string>
    <string name="first_checkpoint_number">Your first checkpoint number:</string>
    <string name="number_of_racers">Number of racers:</string>
    <string name="in_time">In Time:</string>
    <string name="clear">Clear</string>
    <string name="out_time">Out Time:</string>
    <string name="dropped_out_dots">Dropped Out:</string>
    <string name="not_started">Not Started:</string>
    <string name="checkpoint_number">Checkpoint Number</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="create_checkpoint">Create Checkpoint</string>
    <string name="delete_checkpoint">Delete Checkpoint</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="transfer_checkpoint">Transfer Checkpoint</string>
    <string name="receive_checkpoint">Receive Checkpoint</string>
    <string name="export_data_as_json">Export Data (As JSON)</string>
    <string name="start_new_race">Start New Race</string>
    <string name="delete_all_new_race">Delete All (New Race)</string>
    <string name="select_send_checkpoint">Select checkpoint to send</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="version_number_1_0">Version Number: 1.20</string>
    <string name="developer_robert_a_jolly">Developer: Robert A. Jolly</string>
    <string name="checkpoint_double_dot">Checkpoint: </string>
</resources>