<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43A047">

    <TextView
        android:id="@+id/selectedRacersLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/selected_racers_label_string"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline15"
        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedRacersTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="#347732"
        android:elevation="6dp"
        android:gravity="center"
        android:text="@string/selected_racers_text_view_string"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline75"
        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline45"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline15"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/deselectAllButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/deselect_all_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VerticalGuideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HorizontalGuideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HorizontalGuideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VerticalGuideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.51" />

    <uk.co.robertjolly.racemarshallandroid.ui.main.customElements.TimeButton
        android:id="@+id/timeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:text="@string/time_button_string"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline55"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HorizontalGuideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <Button
        android:id="@+id/inButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="#FDD835"
        android:text="@string/in_button_string"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline75"
        app:layout_constraintEnd_toStartOf="@+id/VerticalGuideline775"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline55"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline25" />

    <Button
        android:id="@+id/outButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="#D81B60"
        android:text="@string/out_button_string"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline775"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VerticalGuideline775"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.755" />

    <Button
        android:id="@+id/otherActionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#5E35B1"
        android:text="@string/other_action_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline55"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline75" />

</androidx.constraintlayout.widget.ConstraintLayout>